k8s/user-service/overlays/dev/ingress-http.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-service-http-ingress
spec:
  rules:
    - host: http.user-service-dev.money-tracker.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  name: http
